# goit-pythonweb-hw-10

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test_hash.py  user_check.sql
app/: enums.py  main.py
app/api/v1/: __init__.py  auth.py  contacts.py  send_email.py  users.py
app/core/: config.py  limiter.py  mail_config.py
app/crud/: crud_contacts.py  crud_users.py
app/db/: base.py  base_class.py  deps.py  session.py
app/models/: contact.py  user.py
app/schemas/: contact.py  token.py  user.py
app/services/: auth.py  upload_file.py  verify_email.py
checking_stuff/: index.html
checking_stuff/sqls/: contact_check.sql  user_check.sql
migrations/: env.py
migrations/versions/: 27c65b64848d_change_birthday_type_to_date.py  7b3d4e9e0ccc_phone_and_email_is_not_unique_already.py  9fb13c96724f_role_as_enum.py  cdf316040ebd_initial_migration.py  db62754c0156_add_email_and_confirmed_fields_to_user4.py  ff974270e925_change_user_s_email_field_as_unique.py
sqls/: contact_check.sql
templates/: example_email.html  verify_email.html
